--- a/scratch.html
+++ b/scratch.html
@@ -9,7 +9,7 @@
 <body>
     
     <h1> Hi, I'm Helina!</h1>
-    <img src="...../images/myself.jpg" class="small-image">
+    <img src="../images/myself.jpg" class="small-image">
     <p>
         See my <a href="https://helinauibel.github.io/IS/" target="_blank" title="Helina's professional page">Professional Page.</a>
     </p>
