--- a/scratch.html
+++ b/scratch.html
@@ -13,7 +13,7 @@
     <p>
         See my <a href="https://helinauibel.github.io/IS/" target="_blank" title="Helina's professional page">Professional Page.</a>
     </p>
-     <div class="common mainbody">
+     <div class="body">
         <p class="justify"><span class="bold">I've been running for about five years and it is my favoirte hobby. Here's a little bit more about my running:</p>
  
       <ol>
