--- a/scratch.html
+++ b/scratch.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scratch</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     
     <h1> Hi, I'm Helina!</h1>
-    <img src="../images/myself.jpg" class="small-image">
+    <img src="images/myself.jpg" class="small-image">
     <p>
         See my <a href="https://helinauibel.github.io/IS/" target="_blank" title="Helina's professional page">Professional Page.</a>
     </p>
